...
            <ImageView
                android:id="@+id/iv_icon_name"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/ICONO_NOMBRE_ENTREVISTADO"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@+id/il_interview_name"
                app:layout_constraintStart_toStartOf="@+id/guia_izq"
                app:layout_constraintTop_toTopOf="@+id/il_interview_name"
                app:srcCompat="@drawable/ic_person_black_24dp"
                app:tint="@color/colorSecondaryVariant" />

            <com.google.android.material.textfield.TextInputLayout
...
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_name"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_interview_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_interview_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:hint="@string/APELLIDO"
...
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_name"
                app:layout_constraintTop_toBottomOf="@+id/il_interview_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_interview_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="16sp" />
...
                android:hint="@string/FECHA_NACIMIENTO"
                app:endIconDrawable="@drawable/ic_date_black_24dp"
                app:endIconMode="custom"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_birth_date"
                app:layout_constraintTop_toBottomOf="@+id/il_interviewee_genre">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
...
                app:endIconMode="clear_text"
                app:helperText="@string/HELPER_COHABITANTS"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_coexistence"
                app:layout_constraintTop_toBottomOf="@+id/il_interviewee_civil_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_n_coexistence_interviewee"
                    style="@style/Widget.MaterialComponents.AutoCompleteTextView.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
