...
    <string name="INGLES" translatable="false">en</string>
    <string name="ESPANOL" translatable="false">es</string>

    <!-- SEXO-->
    <string name="SEXO_MASCULINO">Male</string>
    <string name="SEXO_FEMENINO">Female</string>
    <string name="SEXO_OTRO">Other</string>
    <string name="SEXO_MASCULINO_MASTER_KEY" translatable="false">Masculino</string>
    <string name="SEXO_FEMENINO_MASTER_KEY" translatable="false">Femenino</string>
    <string name="SEXO_OTRO_MASTER_KEY" translatable="false">Otro</string>

    <!-- ROLES -->
    <string name="ROL_INVESTIGADOR">Researcher</string>
...
    <string name="CANAL_DESCRIPCION">Registration alerts for new researchers</string>

    <!-- Titulos Toolbar -->
    <string name="TITULO_TOOLBAR_PERFIL">Profile</string>
    <string name="TITULO_TOOLBAR_REGISTRO">Register</string>
    <string name="TITULO_TOOLBAR_NUEVO_ENTREVISTADO">New Interviewee</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTADO">Edit Interviewee</string>
    <string name="TITULO_TOOLBAR_NUEVA_ENTREVISTA">New Interview</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTA">Edit Interview</string>
    <string name="TITULO_TOOLBAR_CREAR_EVENTO">New event</string>
    <string name="TITULO_TOOLBAR_EVENTOS">Events</string>
    <string name="TITULO_TOOLBAR_LISTA_ENTREVISTAS">Interviews List</string>
    <string name="TITULO_TOOLBAR_EDITAR_PERFIL">Edit Profile</string>
...
    <string name="NOTIFICACION_DESCRIPCION_EN" translatable="false">descripcion_en</string>
    <string name="NOTIFICACION_INTENT_ACTIVADO" translatable="false">notificacionActivaciones</string>


    <!-- Menu -->
    <string name="MENU_ENTREVISTADO_INFO_BASICA">Show basic information</string>
    <string name="MENU_ENTREVISTADO_EDITAR">Edit interviewee</string>
    <string name="MENU_ENTREVISTADO_VER_ENTREVISTAS">Show interviews</string>
    <string name="MENU_ENTREVISTADO_ELIMINAR">Delete interviewee</string>
    <string name="MENU_ACTUALIZAR">Update</string>
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="MENU_GUARDAR_DATOS">Save</string>
    <string name="MENU_ENTREVISTA_VER_EVENTO">Show events</string>
    <string name="MENU_ENTREVISTA_EDITAR">Edit interview</string>
    <string name="MENU_ENTREVISTA_ELIMINAR">Delete interview</string>
    <string name="MENU_PERFIL_EDITAR">Edit profile</string>
    <string name="MENU_CONDICIONES">Conditions and privacy</string>
    <string name="MENU_CONTACTENOS">Contact us</string>
...
    <string name="OLVIDAR_CONTRASEÑA">Forgot password?</string>
    <string name="INTRUCCIONES_RECUPERACION">Enter your email to send you account recovery instructions</string>
    <string name="REGISTRAR">Register</string>
    <string name="NUEVA_CONTRASEÑA">New password</string>
    <string name="NUEVA_PASS_INTRUCCIONES">Please, enter a new password</string>
    <string name="FECHA_REGISTRO_ENTREVISTA">Registry date</string>
    <string name="ICONO_MENU_CONTEXTUAL">Contextual menu icon</string>
    <string name="MSG_LISTADO_ENTREVISTADOS_VACIO">You don\'t have interviewees yet</string>
    <string name="EMOTICON">Emoticon</string>
    <string name="EMOTICON_EVENTO">Event emoticon</string>
    <string name="GUION" translatable="false">-</string>
    <string name="CARGAR_MAS">Load more</string>
    <string name="EMOTICON_SPINNER">Dropdown menu emoticon</string>
...
